# ircards

./: LICENCE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
Banker/: card_utils.py  iban_utils.py
Banker/banks_dict/: __init__.py
irCards/: __init__.py  cli.py
